[gd_scene load_steps=3 format=2]

[ext_resource path="res://OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/DejaVuSans-Bold-70.res" type="DynamicFont" id=2]

[node name="ChooseLevelScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
custom_constants/separation = 60
script = ExtResource( 1 )

[node name="OptionsLabel" type="Label" parent="Menu"]
margin_left = 343.0
margin_right = 697.0
margin_bottom = 82.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Options"
uppercase = true

[node name="InvertControlsCheckBox" type="CheckBox" parent="Menu"]
margin_top = 142.0
margin_right = 824.0
margin_bottom = 232.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_constants/hseparation = 60
text = "INVERT CONTROLS"
flat = true

[node name="BackButton" type="Button" parent="Menu"]
margin_top = 381.0
margin_right = 220.0
margin_bottom = 469.0
rect_min_size = Vector2( 220, 88 )
size_flags_horizontal = 0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
flat = true

[node name="BackButtonLabel" type="Label" parent="Menu/BackButton"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
uppercase = true
[connection signal="pressed" from="Menu/InvertControlsCheckBox" to="Menu" method="_on_InvertControlsCheckBox_pressed"]
[connection signal="pressed" from="Menu/BackButton" to="Menu" method="_on_BackButton_pressed"]
